turned evil autoplay off

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <section class="left-col">
         <h3>Food</h3>
         <div class="vid">
-        <iframe width="560" height="315" src="http://kilgorei.pairserver.com/tech-club/HTML5.mp4" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="http://kilgorei.pairserver.com/tech-club/HTML5.mp4" frameborder="0" allowfullscreen autoplay=false></iframe>
         <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
       </section>
       <footer>
