hopefully it finally destroyed autoplay

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <title>Lee Kilgore</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <script>
+      var vid = document.getElementById("test");
+      vid.autoplay = false;
+    </script>
   </head>
   <body>
     <div id="wrapper">
@@ -49,7 +52,7 @@
       <section class="left-col">
         <h3>Food</h3>
         <div class="vid">
-        <iframe width="560" height="315" src="http://kilgorei.pairserver.com/tech-club/HTML5.mp4" frameborder="0" allowfullscreen onload=pause();></iframe>
+        <object width="560" height="315" src="http://kilgorei.pairserver.com/tech-club/HTML5.mp4" frameborder="0" allowfullscreen onload=pause();></object>
         <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
       </section>
       <footer>
