hopefully it works this time

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section class="left-col">
         <h3>Food</h3>
         <div class="vid">
-        <object width="560" height="315" src="http://kilgorei.pairserver.com/tech-club/HTML5.mp4" frameborder="0" allowfullscreen onload=pause();></object>
+        <object id="test" width="560" height="315" data="http://kilgorei.pairserver.com/tech-club/HTML5.mp4"></object>
         <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
       </section>
       <footer>
