--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
     function disableAutoPlay()
     {
-      var vid = document.getElementById("test");
+      var vid = document.getElementById("dogVideo");
       vid.autoplay = false;
       vid.load();
     }
@@ -56,7 +56,7 @@
       <section class="left-col">
         <h3>Food</h3>
         <div class="jkdfkak">
-          <video id="test" width="320" height="176" controls="controls">
+          <video id="dogVideo" width="320" height="176" controls="controls">
           <source src="http://kilgorei.pairserver.com/tech-club/HTML5.mp4" type="video/mp4">
           Your browser does not support HTML5 video.
           </video>
