resolved naming confict

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script>
     function disableAutoPlay()
     {
-      var vid = document.getElementById("dogVideo");
-      vid.autoplay = false;
-      vid.load();
+      var myvid = document.getElementById("dogVideo");
+      myvid.autoplay = false;
+      myvid.load();
     }
     </script>
   </head>
@@ -55,7 +55,7 @@
       </aside>
       <section class="left-col">
         <h3>Food</h3>
-        <div class="jkdfkak">
+        <div class="vid">
           <video id="dogVideo" width="320" height="176" controls="controls">
           <source src="http://kilgorei.pairserver.com/tech-club/HTML5.mp4" type="video/mp4">
           Your browser does not support HTML5 video.
