--- a/index.html
+++ b/index.html
@@ -53,16 +53,21 @@
         <img src="http://4.bp.blogspot.com/-SEOb6gzcKFM/Txx8iHWfsHI/AAAAAAAAAO0/eVsf-Hq5RhU/s1600/motherboard_vectorized.png">
         <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
       </aside>
+      <section class="left-col">
+        <h3>overview</h3>
+        <img src="http://www.easypacelearning.com/design/images/content/personalcomputerhardwareparts.png">
+        <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
+      </section>
       <aside class="sidebar">
       <h3>power supply</h3>
         <img src="http://web2.murraystate.edu/andy.batts/ps/Power_Supply_Pile_1_sm.jpg">
         <p>can never have too much power!!!</p>
       </aside>
-      <aside class="sidebar">
+      <section class="left-col">
       <h3>hard drive</h3>
         <img src="http://www.legitreviews.com/images/reviews/1442/wd_3tb_green_hdd.jpg">
         <p>3TB hard drive!!!</p>
-      </aside>
+      </section>
       <section class="left-col">
         <h3>Food</h3>
         <div class="vid">
