--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
       </aside>
       <section class="left-col">
-        <h3>overview</h3>
-        <img src="http://www.easypacelearning.com/design/images/content/personalcomputerhardwareparts.png">
+        <h3>computer case</h3>
+        <img src="http://www.quietpc.com/images/products/nof-cs-80-sideopen-large.jpg">
         <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
       </section>
       <aside class="sidebar">
@@ -64,24 +64,45 @@
         <p>can never have too much power!!!</p>
       </aside>
       <section class="left-col">
+        <h3>CD/DVD drive</h3>
+        <img src="http://www.clipartpal.com/_thumbs/pd/computer/hardware/dvd_drive.png">
+        <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
+      </section>
+      <aside class="sidebar">
+      <h3>RAM</h3>
+        <img src="http://www.geutebrueck.com/media/_public/products/images_download/DDR3_RAM-1GB_4.94010_d.jpg">
+        <p>can never have too much power!!!</p>
+      </aside>
+      <section class="left-col">
       <h3>hard drive</h3>
         <img src="http://www.legitreviews.com/images/reviews/1442/wd_3tb_green_hdd.jpg">
         <p>3TB hard drive!!!</p>
       </section>
+      <aside class="sidebar">
+      <h3>CPU</h3>
+        <img src="http://x16-18-15-24-25.herokuapp.com/https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRNNfXV4t4tQ2Wzp74hQ_y77Y9I-oUNyHcZ72Rwm_kAuc_D7sRq">
+        <p>can never have too much power!!!</p>
+      </aside>
       <section class="left-col">
-        <h3>Food</h3>
-        <div class="vid">
-          <iframe width="560" height="315">
-          <video controls="controls">
-          <source src="http://kilgorei.pairserver.com/tech-club/HTML5.mp4" type="video/mp4">
-          Your browser does not support HTML5 video.
-          </video>
-          </iframe>
-        </div>
+      <h3>video card</h3>
+        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRlY_lkztYyWID0E2svmKu5m69u6FjdTZcKe9Guz2ANT_Yjp7VKtQ">
+        <p>3TB hard drive!!!</p>
+      </section>
+      <aside class="sidebar">
+      <h3>CPU</h3>
+        <img src="<aside class="sidebar">
+      <h3>CPU fan</h3>
+        <img src="http://image.dhgate.com/albu_244164467_00/1.0x0.jpg">
+        <p>can never have too much power!!!</p>
+      </aside>
+      <section class="left-col">
+      <h3>sound card</h3>
+        <img src="http://archive.techarp.com/editorials/img/NVIDIA_SoundStorm.jpg">
+        <p>3TB hard drive!!!</p>
       </section>
       <div class="clear"></div>
       <footer>
-        <h3>Boxer Dog 2016</h3>
+        <h3></h3>
       </footer>
     </div>
   </body>
