--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
      </header>
       <nav>
         <ul>
-          <li><a href="#">Intro</a></li>
-          <li><a href="#">Size</a></li>
-          <li><a href="#">Play</a></li>
-          <li><a href="#">Food</a></li>
+          <li><a href="#overview">overview</a></li>
+          <li><a href="#motherboard">motherboard</a></li>
+          <li><a href="#case">case</a></li>
+          <li><a href="#powersupply">power supply</a></li>
+          <li><a href="#cddvddrive">CD/DVD drive</a></li>
+          <li><a href="#ram">RAM</a></li>
+          <li><a href="#harddrive">hard drive</a></li>
+          <li><a href="#cpu">CPU</a></li>
+          <li><a href="#videocard">video card</a></li>
+          <li><a href="#cpufan">CPU fan</a></li>
+          <li><a href="#soundcard">sound card</a></li>
         </ul>
       </nav>
 
