added explanations for all the components.

--- a/index.html
+++ b/index.html
@@ -51,61 +51,59 @@
       
       <div class="clear"></div>
       <section class="left-col">
-        <h3>overview</h3>
+        <h3 id="overview">overview</h3>
         <img src="http://www.easypacelearning.com/design/images/content/personalcomputerhardwareparts.png">
-        <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
+        <p>computers are something we use everyday, but we hardly ever think about what is actually going on inside of them.</p>
       </section>
       <aside class="sidebar">
-      <h3>motherboard</h3>
+      <h3 id="motherboard">motherboard</h3>
         <img src="http://4.bp.blogspot.com/-SEOb6gzcKFM/Txx8iHWfsHI/AAAAAAAAAO0/eVsf-Hq5RhU/s1600/motherboard_vectorized.png">
-        <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
+        <p>This is the main part of your computer, it is what everything plugs into, even everything in the usb ports.</p>
       </aside>
       <section class="left-col">
-        <h3>computer case</h3>
+        <h3 id="computercase">computer case</h3>
         <img src="http://www.quietpc.com/images/products/nof-cs-80-sideopen-large.jpg">
-        <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
+        <p>this is where all of the components in the computer are.</p>
       </section>
       <aside class="sidebar">
-      <h3>power supply</h3>
+      <h3 id="powersupply">power supply</h3>
         <img src="http://web2.murraystate.edu/andy.batts/ps/Power_Supply_Pile_1_sm.jpg">
-        <p>can never have too much power!!!</p>
+        <p>can never have too much power!!!  It supplies the power it needs.</p>
       </aside>
       <section class="left-col">
-        <h3>CD/DVD drive</h3>
+        <h3 id="cddvddrive">CD/DVD drive</h3>
         <img src="http://www.clipartpal.com/_thumbs/pd/computer/hardware/dvd_drive.png">
-        <p>Dogs are great.  Dogs are fun. Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.Dogs are great.  Dogs are fun.</p>
+        <p>this is where you can insert cds or dvds and can access data off of them.</p>
       </section>
       <aside class="sidebar">
-      <h3>RAM</h3>
+      <h3 id="ram">RAM</h3>
         <img src="http://www.geutebrueck.com/media/_public/products/images_download/DDR3_RAM-1GB_4.94010_d.jpg">
-        <p>can never have too much power!!!</p>
+        <p>These bar looking things store all of the program data that is open on your computer</p>
       </aside>
       <section class="left-col">
-      <h3>hard drive</h3>
+      <h3 id="harddrive">hard drive</h3>
         <img src="http://www.legitreviews.com/images/reviews/1442/wd_3tb_green_hdd.jpg">
-        <p>3TB hard drive!!!</p>
+        <p>This is where all of your files get stored, if it fails you lose everything.</p>
       </section>
       <aside class="sidebar">
-      <h3>CPU</h3>
+      <h3 id="cpu">CPU</h3>
         <img src="http://x16-18-15-24-25.herokuapp.com/https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRNNfXV4t4tQ2Wzp74hQ_y77Y9I-oUNyHcZ72Rwm_kAuc_D7sRq">
-        <p>can never have too much power!!!</p>
+        <p>This tiny device processes everything you do on your computer.</p>
       </aside>
       <section class="left-col">
-      <h3>video card</h3>
+      <h3 id="videocard">video card</h3>
         <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRlY_lkztYyWID0E2svmKu5m69u6FjdTZcKe9Guz2ANT_Yjp7VKtQ">
-        <p>3TB hard drive!!!</p>
+        <p>add-on video cards provide better graphics which makes gaming better.</p>
       </section>
       <aside class="sidebar">
-      <h3>CPU</h3>
-        <img src="<aside class="sidebar">
-      <h3>CPU fan</h3>
+      <h3 id="cpufan">CPU fan</h3>
         <img src="http://image.dhgate.com/albu_244164467_00/1.0x0.jpg">
-        <p>can never have too much power!!!</p>
+        <p>without this direct cooling on top of the CPU it will overheat fast.</p>
       </aside>
       <section class="left-col">
-      <h3>sound card</h3>
+      <h3 id="soundcard">sound card</h3>
         <img src="http://archive.techarp.com/editorials/img/NVIDIA_SoundStorm.jpg">
-        <p>3TB hard drive!!!</p>
+        <p>add-on sound cards provide better sound.</p>
       </section>
       <div class="clear"></div>
       <footer>
