correction to whyocd.html style file name

--- a/whyocd.html
+++ b/whyocd.html
@@ -5,7 +5,7 @@
   </title>
     <style>
   </style>
-  <link rel="stylesheet" href="tech02.css">
+  <link rel="stylesheet" href="style02.css">
 
 </head>
 <body>
