lets make it right

--- a/whyocd.html
+++ b/whyocd.html
@@ -17,7 +17,7 @@
    bothered by the "not correctly structured" layout of the websites.  So we try<br>
    to make it so that our websites are fun to read and look at.  If you believe<br>
    that something in here is not OCD friendly or something that does bother you<br>
-   then you can file an issue in the estestech.github.io repository. <br>
+   then you can file an issue in the iankilgore.github.io repository. <br>
    Also I tried to make this "why OCD" page OCD friendly as well.</p><br>
     <p>The not correctly structured at the same time probably shouldn't be in quotes.<br>
     Maybe for people with OCD it really isn't correctly structured.<br>
